# polypolarism

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: build.md  check.md  test.md
.github/workflows/: ci.yml  publish.yml
docs/: README.md  backlog.md  diagnostics.md  leniency.md  operations.md  row-polymorphism.md  schemas.md  versions.md
docs/adr/: 0001-polars-pandera-version-support.md  0002-compiler-style-test-harness.md  0003-dual-direction-fixture-testing.md  0004-polars-support-floor-1-37.md  0005-annotated-assignment-checking.md  0006-implicit-open-frame-sources.md  0007-unrecognized-field-annotations-degrade-to-unknown.md  0008-static-verification-only-no-snapshots.md  0009-no-false-positive-prone-diagnostics.md  0010-patito-frontend.md
docs/research/: coupling-inventory.md  polars-pandera-churn.md
docs/spec/: Phase1.md
src/polypolarism/: __init__.py  __main__.py  analyzer.py  checker.py  cli.py  column_index.py  diagnostics.py  dsl.py  expr_infer.py  output.py  pandera_annotation.py  pandera_dtype.py  pandera_schema.py  patito_dtype.py  patito_schema.py  rowpoly.py  types.py  version_check.py
src/polypolarism/compat/: __init__.py  pandera_api.py  patito_api.py  polars_api.py
src/polypolarism/ops/: __init__.py  groupby.py  join.py  reshape.py
tests/: __init__.py  test_analyzer.py  test_checker.py  test_cli.py  test_cross_module_helpers.py  test_cross_module_schemas.py  test_dsl.py  test_dtype_annotation.py  test_expr_infer.py  test_fixtures.py  test_function_call.py  test_groupby_shorthand.py  test_method_calls.py  test_no_dynamic_execution.py  test_ops_groupby.py  test_ops_join.py  test_output.py  test_pandera_annotation.py  test_pandera_dtype.py  test_pandera_schema.py  test_parse_filename.py  test_patito_dtype.py  test_patito_schema.py  test_properties.py  test_rename_targets.py  test_return_paths.py  test_rowpoly.py  test_rowpoly_multivar.py  test_rowpoly_preservation.py  test_rowpoly_recognition.py  test_rowpoly_threading.py  test_runtime_differential.py  test_types.py  test_validate_narrow.py  test_version_check.py
tests/fixtures/: README.md
tests/fixtures/invalid/: absent_join_no_reintroduce.expected  absent_join_no_reintroduce.py  absent_rename_chain.expected  absent_rename_chain.py  adr0006_amendment_proofs.expected  adr0006_amendment_proofs.py  agg_type_error.expected  agg_type_error.py  agg_udf_scalar_declared.expected  agg_udf_scalar_declared.py  arith_incompatible.expected  arith_incompatible.py  arr_eval_as_list_declared_array.expected  arr_eval_as_list_declared_array.py  arr_list_mismatch.expected  arr_list_mismatch.py  array_width_mismatch.expected  array_width_mismatch.py  async_and_nested_funcs.expected  async_and_nested_funcs.py  bare_return_eager_into_lazy.expected  bare_return_eager_into_lazy.py  bin_on_int.expected  bin_on_int.py  cast_column_not_found.expected  cast_column_not_found.py  cast_frame_schema_ineffective.expected  cast_frame_schema_ineffective.py  cast_impossible.expected  cast_impossible.py  cat_on_int.expected  cat_on_int.py  coerce_limits.expected  coerce_limits.py  col_not_found.expected  col_not_found.py  column_membership_guard_no_coerce.expected  column_membership_guard_no_coerce.py  compare_incompatible.expected  compare_incompatible.py  (+222 more)
tests/fixtures/valid/: absent_reintroduce_join.expected  absent_reintroduce_join.py  absent_rename_swap.expected  absent_rename_swap.py  adr0006_amendment_flows.expected  adr0006_amendment_flows.py  agg_implicit_list.expected  agg_implicit_list.py  agg_len_filter.expected  agg_len_filter.py  agg_udf_list_wrap.expected  agg_udf_list_wrap.py  arithmetic_dtypes.expected  arithmetic_dtypes.py  array_dtype.expected  array_dtype.py  backward_narrowing_scoped.expected  backward_narrowing_scoped.py  bare_helper_return_open.expected  bare_helper_return_open.py  basic_join.expected  basic_join.py  bin_namespace.expected  bin_namespace.py  branch_merge_nullability.expected  branch_merge_nullability.py  cat_namespace.expected  cat_namespace.py  chained_operations.expected  chained_operations.py  coerce_len_agg.expected  coerce_len_agg.py  (+243 more)
(+32 files in other folders)
